--- a/src/Components/Umrah/Pilgrims/Pilgrim.css
+++ b/src/Components/Umrah/Pilgrims/Pilgrim.css
@@ -23,3 +23,63 @@
   color: brown;
   margin-top: -3px;
 }
+.pilgrim-create .info{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 15px;
+}
+form {
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
+    margin: 0 auto;
+  }
+  
+  .inputField {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
+  
+  .inputField label {
+    font-size: 14px;
+    color: #2d396a;
+  }
+  
+  .inputField input,
+  .inputField select,
+  .inputField textarea {
+    padding: 14px;
+    font-size: 14px;
+    border-radius: 10px;
+    outline: none;
+    background-color: #f9f9f9;
+    border: 1px solid #dee1ea;
+  }
+  
+  .nameRow, .infoRow {
+    display: flex;
+    gap: 20px;
+  }
+  
+  .nameRow .inputField,
+  .infoRow .inputField {
+    flex: 1;
+  }
+  
+  textarea {
+    resize: vertical;
+  }
+  
+  .formActions {
+    display: flex;
+    gap: 15px;
+    justify-content: flex-end;
+  }
+  
+  .error {
+    color: red;
+    font-size: 12px;
+  }
+  
