--- a/src/App.css
+++ b/src/App.css
@@ -40,4 +40,119 @@ input{
 }
 .inputField input textarea{
   color: black;
+  /* gap: 20px; */
+
+
+}
+.css-13cymwt-control{
+  padding: 2px;
+}
+#birthDate{
+  padding: 11px;
+}
+#passportExpireDate{
+  padding: 11px;
+}
+.action {
+  display: flex;
+  gap: 15px;
+  align-items: center;
+  font-size: 20px;
+}
+.action .view {
+  flex: 0;
+}
+.action svg {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
+.action .delete {
+  color: brown;
+  margin-top: -3px;
+}
+.pilgrim-create .info {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 15px;
+}
+form {
+  display: flex;
+  flex-direction: column;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.inputField {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.inputField label {
+  font-size: 14px;
+  color: #2d396a;
+  font-weight: 600;
+}
+
+.inputField input,
+.inputField select,
+.inputField textarea {
+  color: black;
+  padding: 12px;
+  font-size: 14px;
+  border-radius: 5px;
+  outline: none;
+  /* background-color: hsla(0, 11%, 95%, 0.851); */
+  background-color: #fff;
+  border: 1px solid #dee1ea;
+}
+
+.inputField .custom-select {
+  /* margin: 10px; */
+  background-color: hsla(0, 11%, 95%, 0.851);
+  color: black;
+  border-radius: 10px;
+  /* border: 1px solid #ccc; */
+}
+.dark .inputField .custom-select {
+  background-color: rgb(46, 43, 43);
+  color: black;
+  border: 1px solid #757575;
+}
+.nameRow, 
+.infoRow {
+  display: flex;
+  /* gap: 20px; */
+  margin: 20px 0;
+}
+
+.nameRow .inputField,
+.infoRow .inputField {
+  flex: 1;
+}
+
+textarea {
+  resize: vertical;
+}
+
+.formActions {
+  display: flex;
+  gap: 15px;
+  margin: 15px 0;
+  justify-content: flex-end;
+}
+
+.error {
+  color: red;
+  font-size: 12px;
+}
+.dark-mode{
+  color:grey;
+  background-color: rgb(38, 35, 35);
+}
+.light-mode{
+  color: #2d396a;  
+  background-color: hsla(0, 11%, 95%, 0.851);
 }
