--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,6 @@ body{
 input{
   color: black;
 }
-/* .MuiBox-root{
-  position: relative;
-  top: 50px;
-  left: 50px;
-  bottom: 50px;
-}*/
 .main{ 
   position: relative;
   top: 50px;
@@ -34,6 +28,7 @@ input{
 }
 .info{
   display: flex;
+  flex-wrap: wrap;
   justify-content: flex-start;
   gap: 15px;
   align-items: center;
@@ -73,12 +68,14 @@ input{
 }
 .pilgrim-create .info {
   display: flex;
+  flex-wrap: wrap;
   justify-content: flex-start;
   align-items: center;
   gap: 15px;
 }
 form {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   max-width: 100%;
   margin: 0 auto;
@@ -86,6 +83,7 @@ form {
 
 .inputField {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   gap: 5px;
 }
@@ -124,6 +122,7 @@ form {
 .nameRow, 
 .infoRow {
   display: flex;
+  /* flex-wrap: wrap; */
   /* gap: 20px; */
   margin: 20px 0;
 }
@@ -139,6 +138,7 @@ textarea {
 
 .formActions {
   display: flex;
+  flex-wrap: wrap;
   gap: 15px;
   margin: 15px 0;
   justify-content: flex-end;
